--- a/sign-up.html
+++ b/sign-up.html
@@ -86,21 +86,7 @@
   <script src="js/main.js"></script>
 
   <!-- script for password match -->
-  <script>
-    window.onload = function () {
-      document.getElementById("password").onchange = validatePassword;
-      document.getElementById("password1").onchange = validatePassword;
-    }
-
-    function validatePassword() {
-      var pass2 = document.getElementById("password1").value;
-      var pass1 = document.getElementById("password").value;
-      if (pass1 != pass2)
-        document.getElementById("password1").setCustomValidity("Passwords Don't Match");
-      else
-        document.getElementById("password").setCustomValidity('');
-      //empty string means no validation error
-    }
+  <script src="/javascript/sign-up.js">
   </script>
   <!-- script for password match -->
 
